sans num en haut

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       </div>
       
 
-    <div class="contact">
+    <!-- <div class="contact">
       <span>05 90 22 77 51 / 06 90 58 94 01</span>
-    </div>
+    </div>-->
   </header>
 
   <main>
