--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </header>
 
   <main>
-    <h1>MENU DU RESTAURANT</h1>
+    <h1>LE MENU </h1>
 
     <details>
       <summary>🌶️ TAPAS</summary>
