--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </details>
 
       <details>
-        <summary>🍹 MOCOCKTAILS</summary>
+        <summary>🍹 MOCKTAILS</summary>
          <ul> 
             <li> COCKTAILS SANS ALCOOL</li> 
          </ul>
